name:                spectral-clustering
version:             0.2.1.0
synopsis:            Library for spectral clustering.
description:         Spectral clustering of a matrix.
homepage:            http://github.com/GregorySchwartz/spectral-clustering#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gsch@mail.med.upenn.edu
copyright:           2017 Gregory W. Schwartz
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.Clustering.Spectral.Dense
                     , Math.Clustering.Spectral.Sparse
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
                     , hmatrix-svdlibc
                     , kmeans
                     , sparse-linear-algebra
                     , statistics
  ghc-options:         -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/spectral-clustering
